// A.M.D.G
syntax = "proto3";

// Voluntas Protocol v1
//
// A universal protocol for representing intentional structure as computational relationships.
//
// CORE INSIGHT:
// Everything - types, instances, operations, metadata, commentary, execution results -
// can be represented as relationships between participants. By making relationships
// the atomic primitive, we create a unified substrate for expressing, evolving, and
// reasoning about intent.
//
// DESIGN PRINCIPLES:
//
// 1. Relationships are first-class
//    Every relationship has an ID and can be referenced by other relationships.
//    This enables meta-commentary: you can comment on decisions, question operations,
//    and build arbitrary graphs of reasoning.
//
// 2. Everything is referenceable
//    Participants are identified by uint64 IDs. The high bit distinguishes two realms:
//    - Entities (bit 0): Mutable things that evolve through relationships
//    - Literals (bit 1): Immutable values that are content-addressed
//
// 3. Event-sourced by default
//    The stream is append-only. Current state is derived by replaying relationships.
//    This preserves complete history: what was intended, what changed, why it changed.
//
// 4. Self-describing through bootstrap
//    The type system is not hardcoded - it emerges from relationships. Core types like
//    "defines_type" and "instantiates" are themselves entities that can be referenced,
//    extended, and reasoned about.
//
// 5. Protocol enables interoperability
//    Multiple agents (humans, AIs, tools, runtimes) write to the same stream.
//    Same language, different interpretations: execution, analysis, documentation,
//    validation all consume the same relationship structure.
//
// INTENTIONAL STRUCTURE:
// This protocol represents a programming language where:
// - Syntax: Typed relationships with participants
// - Semantics: Domain-specific (software planning, legal reasoning, system architecture)
// - Execution: Interpreters materialize artifacts (code, docs, analysis) from streams
// - Runtime: Execution results (successes, failures, observations) are relationships
//
// The stream contains not just what was built, but why it was built that way,
// what alternatives were considered, what failed, and how understanding evolved.
//
// INSPIRATION:
// Like Lisp made code programmable through uniform representation (S-expressions),
// Voluntas makes intent programmable through uniform representation (relationships).
// Like event sourcing made state changes explicit and queryable,
// Voluntas makes intentional evolution explicit and queryable.
//

package voluntas.v1;

option java_multiple_files = true;

// Core Protocol: Everything is a relationship between participants.
//
// ID Space:
//   0x0000000000000000 - 0x7FFFFFFFFFFFFFFF : Entities (high bit = 0)
//   0x8000000000000000 - 0xFFFFFFFFFFFFFFFF : Literals (high bit = 1)
//
// Participant Convention:
//   participants[0] is ALWAYS the relationship type
//   Remaining participants are interpreted according to the relationship type

message Literal {
  // ID with high bit set (0x8000000000000000 | n)
  uint64 id = 1;

  // The immutable value this literal represents
  oneof value {
    string string_val = 2;
    int64 int_val = 3;
    double double_val = 4;
    bool bool_val = 5;
    bytes bytes_val = 6;
  }
}

message Relationship {
  // ID with high bit clear
  uint64 id = 1;

  // Participants in this relationship
  // participants[0] = relationship type (entity ID)
  // participants[1..n] = arguments (entity or literal IDs)
  repeated uint64 participants = 2;
}

message Op {
  // when this relationship or literal was invoked
  int64 timestamp = 1;
  oneof payload {
    Literal literal = 2;
    Relationship relationship = 3;
  }
}

message Stream {
  // Unique identifier for this stream
  string stream_id = 1;

  // Ordered sequence of invocations, either literals or relationships
  repeated Op ops = 2;
}

// Bootstrap constants (not part of the wire format, but documented here)
//
// Reserved Entity IDs (1-999):
//   1: defines_type      - Creates a new type entity
//   2: defines_field     - Adds a field to a type
//   3: instantiates      - Creates an instance of a type
//   4: sets_field        - Sets a field value on an entity
//   5: adds_participant  - Adds a participant to an entity
//

// ============================================================================
// gRPC Service Definition
// ============================================================================

service VoluntasService {
  // Submit a raw Relationship to the Voluntas stream
  rpc SubmitRelationship(SubmitRelationshipRequest) returns (SubmitRelationshipResponse);

  // Submit a raw Literal to the Voluntas stream
  rpc SubmitLiteral(SubmitLiteralRequest) returns (SubmitLiteralResponse);
}

message SubmitRelationshipRequest {
  Relationship relationship = 1;
}

message SubmitRelationshipResponse {
  bool success = 1;
  string message = 2;
}

message SubmitLiteralRequest {
  Literal literal = 1;
}

message SubmitLiteralResponse {
  bool success = 1;
  string message = 2;
}

// ============================================================================
// Intent Service Definition (client-facing API)
// ============================================================================

enum FieldType {
  FIELD_TYPE_UNSPECIFIED = 0;
  FIELD_TYPE_STRING = 1;
  FIELD_TYPE_INT32 = 2;
  FIELD_TYPE_INT64 = 3;
  FIELD_TYPE_FLOAT = 4;
  FIELD_TYPE_DOUBLE = 5;
  FIELD_TYPE_BOOL = 6;
  FIELD_TYPE_TIMESTAMP = 8;  // Epoch nanos
  FIELD_TYPE_INTENT_REF = 9;  // Reference to another intent by ID
}

message CreateIntent {
  string text = 1;
  optional int64 parentId = 2;
}

message UpdateIntentText {
  int64 id = 1;
  string new_text = 2;
}

message UpdateIntentParent {
  int64 id = 1;
  int64 parentId = 2;
}

message AddField {
  int64 intentId = 1;
  string fieldName = 2;
  FieldType fieldType = 3;
  optional bool required = 4;
  optional string description = 5;
}

message SetFieldValue {
  int64 intentId = 1;
  string fieldName = 2;
  oneof value {
    string string_value = 3;
    int32 int32_value = 4;
    int64 int64_value = 5;
    float float_value = 6;
    double double_value = 7;
    bool bool_value = 8;
    int64 timestamp_value = 9;
    int64 intent_ref_value = 10;
  }
}

service IntentService {
  rpc SubmitOp(SubmitOpRequest) returns (SubmitOpResponse);
  rpc GetIntent(GetIntentRequest) returns (GetIntentResponse);
  rpc GetFocalScope(GetFocalScopeRequest) returns (GetFocalScopeResponse);
  rpc GetCommands(GetCommandsRequest) returns (GetCommandsResponse);
}

message GetCommandsRequest {}

message CommandInfo {
  string keyword = 1;
  int64 macro_entity_id = 2;
}

message GetCommandsResponse {
  repeated CommandInfo commands = 1;
}

message InvokeMacro {
  int64 macro_entity_id = 1;
  // The text argument; the server creates or looks up the literal ID.
  string text_arg = 2;
  // The parent intent entity ID passed as the second macro argument.
  int64 parent_id = 3;
}

message SubmitOpRequest {
  oneof payload {
    CreateIntent create_intent = 1;
    UpdateIntentText update_intent = 2;
    UpdateIntentParent update_intent_parent = 3;
    AddField add_field = 4;
    SetFieldValue set_field_value = 5;
    InvokeMacro invoke_macro = 6;
  }
}

message SubmitOpResponse {
  bool success = 1;
  string message = 2;
  int64 id = 3;
}

message GetIntentRequest {
  int64 id = 1;
}

message GetIntentResponse {
  bool found = 1;
  IntentProto intent = 2;
  string error = 3;
}

message GetFocalScopeRequest {
  int64 id = 1;
}

message GetFocalScopeResponse {
  bool found = 1;
  IntentProto focus = 2;
  repeated IntentProto ancestry = 3;
  repeated IntentProto children = 4;
  string error = 5;
}

message IntentProto {
  int64 id = 1;
  string text = 2;
  optional int64 parent_id = 3;
  optional int64 created_timestamp = 4;
  optional int64 last_updated_timestamp = 5;
  bool is_meta = 6;
  map<string, FieldDetailsProto> fields = 7;
  map<string, FieldValueProto> field_values = 8;
  repeated int64 participant_ids = 9;
}

message FieldDetailsProto {
  FieldType field_type = 1;
  bool required = 2;
  optional string description = 3;
}

message FieldValueProto {
  oneof value {
    string string_value = 1;
    int32 int32_value = 2;
    int64 int64_value = 3;
    float float_value = 4;
    double double_value = 5;
    bool bool_value = 6;
    int64 timestamp_value = 7;
    int64 intent_ref_value = 8;
  }
}